--- a/style.css
+++ b/style.css
@@ -822,6 +822,10 @@ h6 {
   [data-aos-delay] {
     transition-delay: 0 !important;
   }
+  .scroll-top{
+    right: 15px;
+    bottom: 10px;
+  }
 }
 
 /*--------------------------------------------------------------
